--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,11 +1,14 @@
 alembic==0.8.7
 astroid==1.5.2
 backports.functools-lru-cache==1.4
+bcrypt==3.1.3
 blinker==1.4
+cffi==1.10.0
 click==6.6
 configparser==3.5.0
 enum34==1.1.6
 Flask==0.11
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.2
 Flask-DebugToolbar==0.10.0
 Flask-HTTPAuth==3.2.1
@@ -22,6 +25,7 @@ lazy-object-proxy==1.3.1
 Mako==1.0.4
 MarkupSafe==0.23
 mccabe==0.6.1
+pycparser==2.17
 pylint==1.7.1
 python-editor==1.0.1
 requests==2.11.1
