--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.4
 cffi==1.10.0
 click==6.6
 configparser==3.5.0
+dropbox==7.3.1
 enum34==1.1.6
 Flask==0.11
 Flask-Bcrypt==0.7.1
@@ -32,6 +33,7 @@ requests==2.11.1
 singledispatch==3.4.0.3
 six==1.10.0
 SQLAlchemy==1.0.13
+urllib3==1.21.1
 virtualenv==15.1.0
 Werkzeug==0.11.10
 wrapt==1.10.10
