--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,12 +1,19 @@
 alembic==0.8.7
+appnope==0.1.0
 astroid==1.5.2
+backports-abc==0.5
 backports.functools-lru-cache==1.4
+backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.3
+bleach==2.0.0
 blinker==1.4
+certifi==2017.4.17
 cffi==1.10.0
 click==6.6
 configparser==3.5.0
+decorator==4.0.11
 dropbox==7.3.1
+entrypoints==0.2.3
 enum34==1.1.6
 Flask==0.11
 Flask-Bcrypt==0.7.1
@@ -18,23 +25,57 @@ Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+functools32==3.2.3.post2
 gunicorn==19.6.0
+html5lib==0.999999999
+ipykernel==4.6.1
+ipython==5.4.1
+ipython-genutils==0.2.0
 isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.8
+jsonschema==2.6.0
+jupyter-client==5.0.1
+jupyter-core==4.3.0
+jupyterlab==0.24.1
+jupyterlab-launcher==0.2.9
 lazy-object-proxy==1.3.1
 Mako==1.0.4
 MarkupSafe==0.23
 mccabe==0.6.1
+mistune==0.7.4
+nbconvert==5.2.1
+nbformat==4.3.0
+notebook==5.0.0
+numpy==1.13.0
+pandas==0.20.2
+pandocfilters==1.4.1
+pathlib2==2.3.0
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.14
+ptyprocess==0.5.1
 pycparser==2.17
+Pygments==2.2.0
 pylint==1.7.1
+python-dateutil==2.6.0
 python-editor==1.0.1
+pytz==2017.2
+pyzmq==16.0.2
 requests==2.11.1
+scandir==1.5
+simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
 SQLAlchemy==1.0.13
+terminado==0.6
+testpath==0.3.1
+tornado==4.5.1
+traitlets==4.3.2
 urllib3==1.21.1
 virtualenv==15.1.0
+wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.11.10
 wrapt==1.10.10
 WTForms==2.1
